<resources>
    <string name="app_name">TravelSquad</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="loginhere">Already have an account ? <u>Login</u></string>
    <string name="signuphere">Create a new account? SignUp</string>
    <string name="welcome">Welcome</string>

    <string name="mail">ëmail</string>
    <string name="forget_password_click_here">Forget Password? Click here</string>
    <string name="send_my_password">Send My password</string>
    <string name="resetpassword">ResetPassword</string>

    <string name="share_link">share_link</string>
    <item name="emailss" type="id" />

    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_fill_in_the_location_od_the_trip">Please fill in the location od the trip</string>
    <string name="select_the_date">Select the date</string>

    <string name="textview">TextView</string>
    <string name="TripGeneral">TextView</string>
    <string name="trip">TextView</string>
    <string name="tripName">TextView</string>
    <string name="budget">TextView</string>
    <string name="Cardtitle">ss</string>
    <string name="plan">set the plan</string>
    <string name="Range">Date Range Picker</string>
    <string name="Start">Year-month-date</string>
    <string name="End">End Date</string>
    <string name="Start_Text">Start Date</string>
    <string name="End_Text">End Date</string>
    <string name="Budget">Budget</string>
    <string name="Save">Save</string>


    <string name="Time">00:00</string>
    <string name="AddTime">post</string>
    <string name="AddVote">post</string>
    <string name = "newDate">Please enter your new date</string>
    <string name="calcel">Cancle</string>
    <string name="EnterDate">Please enter your date</string>




    <string name="title_activity_main3">MainActivity3</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">discuss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="location">location</string>

    <string name="title_me">me</string>
    <string name="title_Me">Me</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_email">Reset Email</string>
    <string name="twitterUsername">twitterName</string>
    <string name="twente_netherlands">Twente, Netherlands</string>

    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Create_Chatgroup">Create_ChatGroup</string>
    <string name="hintOfclick">hintOfClick</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="remind_to_take_a_break">Remind me to take a break</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="remind_me">Remind me to take a break</string>
    <string name="remind_me_for_bed_time">remind_me_for_bed_time</string>
    <string name="remind_for_bed_time">Remind me for bed time</string>
    <string name="limit_data_usage">prefs_limit_data_usage</string>
    <string name="stream_video">Only stream HD video on Wi-Fi</string>
    <string name="limit_mobile_usage">Limit mobile data usage</string>
    <string name="double_tap_to_seek">Double-tap to seek</string>
    <string name="pref_seek_val">pref_seek_val</string>
    <string name="seconds">seconds</string>
    <string name="uploads">Uploads</string>
    <string name="pref_uploads">pref_uploads</string>
    <string name="specify_network_prefs">Specify network preferences for uploads</string>
    <string name="prefs_restricted_mode">prefs_restricted_mode</string>
    <string name="restricated_mode">Restricted Mode can help to hide videos with potentially mature content.No filter is 100% accurate, but it should help you to avoid most of this type of content.</string>
    <string name="restricated_mode_description">Restricted Mode</string>
    <string name="prefs_enable_stats">prefs_enable_stats</string>
    <string name="enable_stats">Enable stats for nerds</string>
    <string name="btnlogOut">btnlogOut</string>
    <string name="feedback">feedback</string>
    <string name="changeNumber">Wanna edit your phone number?</string>
    <string name="title_activity_test11111">test11111</string>
    <string name="YourtwitterUsername">YourTwitterName</string>
</resources>
