<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboardFragement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/cardview1"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        tools:layout_editor_absoluteX="133dp"-->
    <!--        tools:layout_editor_absoluteY="142dp">-->


    <View
        android:id="@+id/view"
        android:layout_width="291dp"
        android:layout_height="481dp"
        android:background="@drawable/grad"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/locationinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:textColor="#8F8D8D"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/Budgetinput" />

    <TextView
        android:id="@+id/StartDate"
        android:layout_width="211dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/Start"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/locationinput" />

    <TextView
        android:id="@+id/Enddate"
        android:layout_width="205dp"
        android:layout_height="33dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/Start"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/StartDate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start_Text"
        app:layout_constraintBottom_toTopOf="@+id/StartDate"
        app:layout_constraintStart_toStartOf="@+id/StartDate" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="68dp"
        android:layout_height="25dp"
        android:text="@string/End_Text"
        app:layout_constraintBottom_toTopOf="@+id/Enddate"
        app:layout_constraintStart_toStartOf="@+id/Enddate" />

    <EditText
        android:id="@+id/Budgetinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/Enddate"
        android:autofillHints="Euro" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="85dp"
        android:layout_height="32dp"
        android:text="@string/Budget"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Budgetinput"
        app:layout_constraintStart_toStartOf="@+id/Budgetinput" />


    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>
